--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        tools:replace="android:value"
+        <!--tools:replace="android:value"-->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
