--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://dl.bintray.com/lanboys/MavenRepo' }
+
         jcenter()
     }
 }
