--- a/shareSdkLib/src/main/AndroidManifest.xml
+++ b/shareSdkLib/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <!--微信分享回调 -->
         <activity
-            android:name=".wxapi.WXEntryActivity"
+            android:name="com.bing.lan.share.wxapi.WXEntryActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
